--- a/EggTimer/Base.lproj/Main.storyboard
+++ b/EggTimer/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -121,6 +122,23 @@
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nJN-th-c5K" userLabel="Timer View">
                                         <rect key="frame" x="0.0" y="571.5" width="374" height="246.5"/>
+                                        <subviews>
+                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="jmG-ev-NRP">
+                                                <rect key="frame" x="0.0" y="120.5" width="374" height="6"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="5" id="jdy-qH-o9w"/>
+                                                </constraints>
+                                                <color key="progressTintColor" systemColor="systemYellowColor"/>
+                                                <color key="trackTintColor" systemColor="systemGrayColor"/>
+                                            </progressView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="jmG-ev-NRP" firstAttribute="leading" secondItem="nJN-th-c5K" secondAttribute="leading" id="3Mx-C8-Vrm"/>
+                                            <constraint firstAttribute="trailing" secondItem="jmG-ev-NRP" secondAttribute="trailing" id="Ivm-Dx-tcC"/>
+                                            <constraint firstAttribute="trailing" secondItem="jmG-ev-NRP" secondAttribute="trailing" id="aPP-iE-9GF"/>
+                                            <constraint firstItem="jmG-ev-NRP" firstAttribute="centerY" secondItem="nJN-th-c5K" secondAttribute="centerY" id="jcq-eb-kJv"/>
+                                            <constraint firstItem="jmG-ev-NRP" firstAttribute="leading" secondItem="nJN-th-c5K" secondAttribute="leading" id="m3l-BI-93s"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                             </stackView>
@@ -136,6 +154,7 @@
                     </view>
                     <connections>
                         <outlet property="conditionName" destination="XLm-5r-pSP" id="Vtv-c0-Nrb"/>
+                        <outlet property="progressBarView" destination="jmG-ev-NRP" id="77n-WD-qVJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -147,5 +166,11 @@
         <image name="hard_egg" width="287.5" height="366"/>
         <image name="medium_egg" width="288" height="363"/>
         <image name="soft_egg" width="287" height="365"/>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
